Issue #7 and #8 - Update the rest of the Moonchild stuff to say either Basilisk-Dev or Basilisk Development Team

--- a/basilisk/base/content/overrides/app-license.html
+++ b/basilisk/base/content/overrides/app-license.html
@@ -3,7 +3,7 @@
    - file, You can obtain one at http://mozilla.org/MPL/2.0/.  -->
     <p><b>Binaries</b> of this product have been made available to you by the
     <a href="https://basilisk-browser.org">Basilisk Development Team</a> under the Mozilla
-    Public Licence 2.0 (MPL). <a href="about:rights">Know your rights</a>/</p>
+    Public Licence 2.0 (MPL). <a href="about:rights">Know your rights!</a></p>
     <br>
     Basilisk was formerly developed by the <a href="http://www.palemoon.org/">Pale Moon project team</a>
     and <a href="http://www.moonchildproductions.info/">Moonchild Productions</a>. Without them this project
